20100122 (T.S.)
 - src/drvPadUdpComm.c:
   PADRPLY_STRM_NSAMPLES macro arg is now pointer to reply.
   (Support for 32-bit stream data.)
 - src/padProto.c: set cmdSize based on actual command (SIM's command
   struct is bigger than previously hardcoded 16 bytes).
 - src/padProto.h:
   PADRPLY_STRM_NSAMPLES macro arg is now pointer to reply.
   (Support for 32-bit stream data.)
 - src/padProtoHost.c:
    o New '-L' option to request 32-bit data streams.
    o Compute nsamples using PADRPLY_STRM_NSAMPLES macro.
    o Let SIM command send values 0xaaaa, 0xbbbb, 0xcccc, 0xdddd.
      (Should have another option to specivy values).
 - src/padStream.c: BUGFIX: must check for 32-bit data flag when
   copying data into lan9118's FIFO.
 - src/padUdpCommSupport.dbd: add driver and registrar for drvPadUdpComm.
20100118 (T.S.)
 - src/Makefile, src/devWfRawSig.c, src/drvPadUdpComm.c, src/drvPadUdpComm.h,
   src/drvPadUdpCommIO.h, src/fidProcess.c, src/fidProcess.h,
   src/padUdpCommSupport.dbd, src/wavBuf.c, src/wavBuf.h:
   unbundled drvPadUdpComm/wavBuf from Bpm IOC application and moved into
   udpComm EPICS module (tag udpComm_post_unbundle_drvPadUdpComm).
 20100118 (T.S.)
 - BUGFIX - src/udpCommBSD.c: make sure udpComm routines don't pass the return
   value of system calls (like 'connect') but the negative 'errno' value.
 20100118 (T.S.)
 - src/sddsrd.c, src/sddsrd.h: added support for 32-bit stream data.
 20100118 (T.S.)
 - src/padStream.c, src/padStream.h:
    o changed semantics of 'start' argument to start_stop_cb(); this
      is now a pointer to the STRM command (start) or NULL (stop).
    o added support for 32-bit stream data.
    o added 'd32' argument to stream 'getdata' callback.
    o let padStreamSim() succeed even if stream is not connected
      provided that 'nosend' option is set.
 20100118 (T.S.)
 - src/padProtoHost.c:
    o updated usage info (-d flag).
    o added 32-bit stream data support.
    o added option to set stream timeout.
 20100118 (T.S.)