@@ -230,14 +230,14 @@ strmReplySetup(PadReply rply, uint32_t xid, int d32, int le, int col_maj, int ns
 int len = nsamples*(d32 ? sizeof(int32_t) : sizeof(int16_t))*NCHNS + sizeof(*rply);
 
 	/* Setup Reply */
-	rply->version         = PADPROTO_VERSION1;
+	rply->version         = PADPROTO_VERSION2;
 	rply->type            = PADCMD_STRM | PADCMD_RPLY;
 	rply->chnl            = chnl;
 	rply->nBytes          = htons(len);
 	rply->timestampHi     = htons(0);
 	rply->timestampLo     = htonl(0);
 	rply->xid             = xid;
-	rply->status          = 0;
+	rply->stat            = 0;
 	rply->strm_cmd_flags  = PADRPLY_STRM_FLAG_TYPE_SET(0);
 	if ( le )
 		rply->strm_cmd_flags |= PADCMD_STRM_FLAG_LE;
